--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -1132,6 +1132,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="apidoc/smac.epm.uncorrelated_mo_rf_with_instances.html#smac.epm.uncorrelated_mo_rf_with_instances.UncorrelatedMultiObjectiveRandomForestWithInstances">UncorrelatedMultiObjectiveRandomForestWithInstances (class in smac.epm.uncorrelated_mo_rf_with_instances)</a>
 </li>
+      <li><a href="apidoc/smac.epm.base_epm.html#smac.epm.base_epm.AbstractEPM.unlog_y">unlog_y (smac.epm.base_epm.AbstractEPM attribute)</a>
+
+      <ul>
+        <li><a href="apidoc/smac.epm.rf_with_instances.html#smac.epm.rf_with_instances.RandomForestWithInstances.unlog_y">(smac.epm.rf_with_instances.RandomForestWithInstances attribute)</a>
+</li>
+      </ul></li>
       <li><a href="apidoc/smac.optimizer.acquisition.html#smac.optimizer.acquisition.AbstractAcquisitionFunction.update">update() (smac.optimizer.acquisition.AbstractAcquisitionFunction method)</a>
 
       <ul>
