--- a/dev/_modules/smac/epm/base_epm.html
+++ b/dev/_modules/smac/epm/base_epm.html
@@ -289,11 +289,15 @@
 <span class="sd">        to var_threshold</span>
 <span class="sd">    types : list</span>
 <span class="sd">        If set, contains a list with feature types (cat,const) of input vector</span>
+<span class="sd">    unlog_y: bool</span>
+<span class="sd">        If the y data in the training data is log-transformed,</span>
+<span class="sd">        this option will undo this tranformation during predictions        </span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
     <span class="k">def</span> <span class="nf">__init__</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span>
                  <span class="n">instance_features</span><span class="p">:</span> <span class="n">np</span><span class="o">.</span><span class="n">ndarray</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
-                 <span class="n">pca_components</span><span class="p">:</span> <span class="nb">float</span><span class="o">=</span><span class="kc">None</span><span class="p">):</span>
+                 <span class="n">pca_components</span><span class="p">:</span> <span class="nb">float</span><span class="o">=</span><span class="kc">None</span><span class="p">,</span>
+                 <span class="n">unlog_y</span><span class="p">:</span><span class="nb">bool</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
         <span class="sd">&quot;&quot;&quot;Constructor</span>
 
 <span class="sd">        Parameters</span>
@@ -305,9 +309,14 @@
 <span class="sd">            Number of components to keep when using PCA to reduce</span>
 <span class="sd">            dimensionality of instance features. Requires to</span>
 <span class="sd">            set n_feats (&gt; pca_dims).</span>
+<span class="sd">        unlog_y: bool</span>
+<span class="sd">            If the y data in the training data is log-transformed,</span>
+<span class="sd">            this option will undo this tranformation during predictions    </span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">instance_features</span> <span class="o">=</span> <span class="n">instance_features</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">pca_components</span> <span class="o">=</span> <span class="n">pca_components</span>
+        <span class="bp">self</span><span class="o">.</span><span class="n">unlog_y</span> <span class="o">=</span> <span class="n">unlog_y</span>
+        
         <span class="k">if</span> <span class="n">instance_features</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">n_feats</span> <span class="o">=</span> <span class="n">instance_features</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="mi">1</span><span class="p">]</span>
         <span class="k">else</span><span class="p">:</span>
@@ -463,9 +472,10 @@
             <span class="n">X_</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">hstack</span><span class="p">(</span>
                 <span class="p">(</span><span class="n">np</span><span class="o">.</span><span class="n">tile</span><span class="p">(</span><span class="n">x</span><span class="p">,</span> <span class="p">(</span><span class="n">n_instances</span><span class="p">,</span> <span class="mi">1</span><span class="p">)),</span> <span class="bp">self</span><span class="o">.</span><span class="n">instance_features</span><span class="p">))</span>
             <span class="n">means</span><span class="p">,</span> <span class="nb">vars</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">predict</span><span class="p">(</span><span class="n">X_</span><span class="p">)</span>
-            <span class="c1"># use only mean of variance and not the variance of the mean here</span>
-            <span class="c1"># since we don&#39;t want to reason about the instance hardness distribution</span>
-            <span class="n">var_x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">mean</span><span class="p">(</span><span class="nb">vars</span><span class="p">)</span>  <span class="c1"># + np.var(means)</span>
+            <span class="c1"># VAR[1/n (X_1 + ... + X_n)] = </span>
+            <span class="c1"># 1/n^2 * ( VAR(X_1) + ... + VAR(X_n)) </span>
+            <span class="c1"># for independent X_1 ... X_n </span>
+            <span class="n">var_x</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="nb">vars</span><span class="p">)</span> <span class="o">/</span> <span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="nb">vars</span><span class="p">)</span><span class="o">^</span><span class="mi">2</span><span class="p">)</span>
             <span class="k">if</span> <span class="n">var_x</span> <span class="o">&lt;</span> <span class="bp">self</span><span class="o">.</span><span class="n">var_threshold</span><span class="p">:</span>
                 <span class="n">var_x</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">var_threshold</span>
 
